# poc

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
analytics/: CMakeLists.txt
analytics/core/: CMakeLists.txt  Makefile
analytics/core/src/: core.cpp  core.h
analytics/interface/: CMakeLists.txt  analytics.i
analytics/test/: CMakeLists.txt
analytics/test/src/: core_test.cpp
interface/: Makefile  cmake_install.cmake
